# File-Quality-Assurance-Rag-Chatbot

./: .env  CLAUDE.md  README.md  app.py  codebase_explanation.txt  logs.txt  main.py  pyproject.toml  requirements.txt
.claude/: settings.local.json
chroma_db_store/: chroma.sqlite3
